--- a/admin/react-vc-admin/package.json
+++ b/admin/react-vc-admin/package.json
@@ -10,9 +10,11 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.5.1",
     "graphql": "^15.6.1",
     "graphql-request": "^3.5.0",
     "react": "^17.0.2",
+    "react-chartjs-2": "^3.0.5",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
