--- a/admin/express/package.json
+++ b/admin/express/package.json
@@ -16,6 +16,7 @@
   "author": "Ge Lee",
   "license": "ISC",
   "dependencies": {
+    "argon2": "^0.28.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-graphql": "^0.12.0",
